Back to java 8
Tornado fx isn't ready for Java 11

https://github.com/edvin/tornadofx/issues/899