@@ -1,10 +1,4 @@
 # Colors - Fx
 Really simple example of Tornado Fx 
 
-## Running in local with TornadoFx plugin
-
-Since Java 11 doesn't have JavaFx it's important to add it in the vm options like this:
-
-`--module-path "path\to\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml`
-
-Great documentation on [Open JavaFx web page](https://openjfx.io/openjfx-docs/#IDE-Intellij)
+Example of: :Create or update view
